customer accounts list added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
@@ -13,7 +13,7 @@ spring.sql.init.mode=always
 ###### Email Properties ######
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mdasifjoardar@gmail.com
-spring.mail.password=yydrwbdzlliitywv
+spring.mail.username=${email}
+spring.mail.password=${email_pass}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
