--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,17 @@ spring.datasource.username=${db_username}
 spring.datasource.password=${db_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spri
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ###### Email Properties ######
 spring.mail.host=smtp.gmail.com
