--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/dummy
+spring.datasource.url=jdbc:postgresql://localhost:5432/notifier
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
