--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/notifier
+#spring.datasource.url=jdbc:postgresql://localhost:5432/notifier
+spring.datasource.url=${db_url}
 spring.datasource.username=${db_username}
 spring.datasource.password=${db_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.defer-datasource-initialization=true
@@ -15,8 +16,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ###### Email Properties ######
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=${email_host}
+spring.mail.port=${email_port}
 spring.mail.username=${email}
 spring.mail.password=${email_pass}
 spring.mail.properties.mail.smtp.auth=true
