logging aspect added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,15 @@ spring.datasource.username=${db_username}
 spring.datasource.password=${db_pass}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 ###### Email Properties ######
@@ -23,3 +23,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.error.whitelabel.enabled=false
+
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=ERROR
+logging.level.com.asif=DEBUG
